RESOLVED FIXED272092
Functionally fix fast/loader/window-open-to-invalid-url-calls-policy-delegate.html with --site-isolation
https://bugs.webkit.org/show_bug.cgi?id=272092
Summary Functionally fix fast/loader/window-open-to-invalid-url-calls-policy-delegate...
Alex Christensen
Reported 2024-04-03 09:33:32 PDT
...
Attachments
Alex Christensen
Comment 1 2024-04-03 09:39:05 PDT
EWS
Comment 2 2024-04-03 12:13:08 PDT
Committed 277018@main (95a0fa3e3d5e): <https://commits.webkit.org/277018@main> Reviewed commits have been landed. Closing PR #26794 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-03 12:14:14 PDT
Note You need to log in before you can comment on or make changes to this bug.