Functionally fix fast/loader/window-open-to-invalid-url-calls-policy-delegate.html with --site-isolation https://bugs.webkit.org/show_bug.cgi?id=272092

Reviewed by Per Arne Vollan.

This fixes two issues.  The first is that the test calls window.open with _top as the second parameter,
and when running with --site-isolation the top frame is a RemoteFrame, so I moved a few dynamicDowncast<LocalFrame>
calls from LocalDOMWindow::open to only be where we really need a LocalFrame.

The second issue is that we were calling WebProcessProxy::fontdMachExtensionHandles multiple times for the same
process, which caused an assertion and is unnecessary.  Fix that by only calling it once per process, since
it is a process-global thing.

This makes the test pass except for another change needed to printNavigationErrorMessage which I'll do in a separate
PR because that will need to remove the frame URL of the frame we attempted to navigate, which is unavailable and
should not be available if it is a RemoteFrame.  I'll do that in a separate PR because it'll require updating 64
test expectations files.

* Source/WebCore/page/LocalDOMWindow.cpp:
(WebCore::LocalDOMWindow::open):
* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::switchFromStaticFontRegistryToUserFontRegistry):
* Source/WebKit/UIProcess/Cocoa/WebProcessProxyCocoa.mm:
(WebKit::WebProcessProxy::fontdMachExtensionHandles):
(WebKit::WebProcessProxy::fontdMachExtensionHandles const): Deleted.
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
* Source/WebKit/UIProcess/WebProcessProxy.h:

Canonical link: https://commits.webkit.org/277018@main